# stepwise_mol_bio

./: .bumpversion.cfg  .gitignore  README.rst  pyproject.toml
.github/workflows/: test_and_release.yml
docs/: conf.py
stepwise_mol_bio/: __init__.py  _assembly.py  _sample_utils.py  _utils.py  aliquot.py  anneal.py  autoclave.py  centrifuge.py  conf.toml  digest.py  direct_dilution.py  dnase.py  ethanol_precipitation.py  ethanol_precipitation.txt  gibson.py  golden_gate.py  grow.py  invpcr.py  ivt.py  ivtt.py  kld.py  ligate.py  lyophilize.py  miniprep.py  page_purify.py  pcr.py  qpcr.py  reverse_transcribe.py  sequence.py  serial_dilution.py  spin_cleanup.py  thermocycler.py  transform.py  trizol.py  utils.py
stepwise_mol_bio/gels/: _biotium.py  _stain.py  coomassie.py  gel.py  gelgreen.py  laser_scanner.py  simplyblue.py  stain.py  transilluminator.py
tests/: conftest.py  param_helpers.py  schema_helpers.py  test_aliquot.py  test_all_params_used.py  test_anneal.nt  test_anneal.py  test_assembly.nt  test_assembly.py  test_autoclave.nt  test_autoclave.py  test_centrifuge.nt  test_centrifuge.py  test_conftest.py  test_digest.nt  test_digest.py  test_direct_dilution.nt  test_direct_dilution.py  test_dnase.nt  test_dnase.py  test_everything.py  test_gel.nt  test_gel.py  test_gibson.nt  test_golden_gate.nt  test_golden_gate.py  test_grow.nt  test_ivt.nt  test_ivt.py  test_ivtt.nt  test_ivtt.py  test_kld.nt  test_ligate.nt  test_lyophilize.nt  test_miniprep.nt  test_miniprep.py  test_page_purify.nt  test_pcr.nt  test_pcr.py  test_reverse_transcribe.nt  (+18 more)
