[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stepwise_mol_bio"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = "README.rst"
dynamic = ["version", "description"]
requires-python = "~=3.10"
dependencies = [
  'byoc',
  'appdirs',
  'autoprop',
  'biopython',
  'freezerbox',
  'inform~=1.21',
  'more_itertools~=8.6',
  'numpy',
  'requests',
  'rtoml',
  'stepwise',
  'tidyexc',
]
classifiers = [
  'Programming Language :: Python :: 3.10',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
  'pytest-env',
  'parametrize_from_file',
  'requests_testing',
  're_assert',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.urls]
'Documentation' = 'https://stepwise_mol_bio.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/stepwise_mol_bio'
'Bug Tracker' = 'https://github.com/kalekundert/stepwise_mol_bio/issues'
'Continuous Integration' = 'https://github.com/kalekundert/stepwise_mol_bio/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/stepwise_mol_bio'

[project.entry-points."stepwise.protocols"]
molbio = "stepwise_mol_bio:Plugin"

[project.entry-points."freezerbox.make"]
anneal = "stepwise_mol_bio:Anneal"
digest = "stepwise_mol_bio:RestrictionDigest"
gibson = "stepwise_mol_bio:Gibson"
golden-gate = "stepwise_mol_bio:GoldenGate"
inverse-pcr = "stepwise_mol_bio:InversePcr"
ivt = "stepwise_mol_bio:Ivt"
ligate = "stepwise_mol_bio:Ligate"
pcr = "stepwise_mol_bio:Pcr"
transform = "stepwise_mol_bio:Transform"

aliquot = "stepwise_mol_bio:Aliquot"
autoclave = "stepwise_mol_bio:Autoclave"
lyophilize = "stepwise_mol_bio:Lyophilize"
miniprep = "stepwise_mol_bio:Miniprep"
page-purify = "stepwise_mol_bio:PagePurify"
sequence = "stepwise_mol_bio:Sequence"
spin-cleanup = "stepwise_mol_bio:SpinCleanup"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'
markers = """slow: marks tests as slow (deselect with '-m "not slow"')"""
env = "STEPWISE_IGNORE_LOCAL_CONFIG=1"

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
scopes = [
  "aliquot",
  "anneal",
  "assembly",
  "autoclave",
  "digest",
  "direct_dilution",
  "ethanol_precipitation",
  "gel",
  "gibson",
  "golden_gate",
  "grow",
  "invpcr",
  "ivt",
  "ivtt",
  "kld",
  "laser_scanner",
  "ligate",
  "lyophilize",
  "miniprep",
  "page_purify",
  "pcr",
  "phenol_chloroform",
  "qpcr",
  "retransform",
  "rnasezap",
  "serial_dilution",
  "sequence",
  "spin_cleanup",
  "stain",
  "thermocycler",
  "transform",
  "transilluminator",
  "trizol",
]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
branch = 'release'
version_variable = 'stepwise_mol_bio/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
